# inteli1-B-ws

./: .gitignore  README.md  ros_source.bash
src/brain/: package.xml  setup.py
src/brain/brain/: deepface_test.py  srd_flask_server.py  srd_severity_analyzer.py
src/brain/launch/: srd_system.launch.py
src/final_project/: package.xml  setup.py
src/rescue_bot/: package.xml  setup.py
src/rescue_bot/docs/: pose_analysis_criteria.md  pose_core_code_review_only.docx  pose_core_code_review_only.ipynb  robot6_code_review_summary.docx
src/rescue_bot/launch/: rescue_real.launch.py  rescue_sim.launch.py  rescue_web.launch.py
src/rescue_bot/rescue_bot/: robot6_code_review_summary.ipynb
src/rescue_bot/rescue_bot/analyzer/: rescue_control_node.py  rescue_nav_node.py  rescue_stt_node.py  rescue_vision_core.py  rescue_vision_node.py  rescue_webcam_direct_test.py  rescue_webcam_pub_node.py  srd_advanced_analyzer.py  srd_gpt_analyzer.py  srd_pose_emergency_core.py  srd_pose_emergency_node.py  srd_pose_severity_core.py  srd_pose_severity_node.py  srd_webcam_analyzer.py  test_webcam_pub.py
src/rescue_bot/rescue_bot/analyzer/archive/: rescue_vision_node.py  rescue_vision_node_webcam_allinone.py  rescue_webcam_v620_standalone.py  stt_1.py  test_webcam_pub.py
src/rescue_bot/rescue_bot/database/: srd_database_node.py
src/rescue_bot/rescue_bot/web/: rescue_ui.py  srd_flask_server.py
src/rescue_bot/rescue_bot/web/templates/: welcome_center_srd.html
src/web_ui/: package.xml  setup.py
src/web_ui/web_ui/: firebase_config.py  login.html  web_ui.css  web_ui.html  web_ui.js
